{
    "name": "TouchActions",
    "maps": [
        {
            "name": "Touch",
            "id": "0cb25049-acbd-4604-97d6-f2aaaf66b1d8",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "b0510899-55ad-487d-a642-f477ee4e0224",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Value",
                    "id": "f75b81a6-ae31-4850-bce5-a0c78222482b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchMovement",
                    "type": "Value",
                    "id": "a438497f-bd2b-4065-a2d9-e2d923581e77",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress2",
                    "type": "Button",
                    "id": "44f2f582-dbe0-4cd7-bc3b-31cad1e50b70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e65b4728-18fe-4ebd-920f-c12d9fa2af17",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ede7723-107a-4660-ab08-540db66abbc7",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40db4c7e-8054-4828-ac1a-f36efa196005",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a0cf4c1-231c-49d1-a0c2-cbf901ad6b46",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}